[workspace]
members = [".", "cli"]

[workspace.package]
edition = "2018"
authors = ["Edouard Paris <m@edouard.paris>"]
license-file = "LICENSE"
repository = "https://github.com/wizardsardine/async-hwi"
keywords = ["bitcoin"]

[package]
name = "async-hwi"
version = "0.0.30"
readme = "README.md"
description = "Async hardware wallet interface"
license-file.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["ledger", "specter", "coldcard", "bitbox", "jade", "service"]
# Transport-agnostic BitBox02 support — compiles on all platforms including Android.
# Provides BitBox02<T>::from(PairedBitBox<T>), register_wallet, sign_tx, get_extended_pubkey, etc.
bitbox = ["tokio", "dep:bitbox-api", "bitbox-api/tokio", "bitbox-api/multithreaded", "regex"]
# Adds USB HID enumeration & pairing (desktop only). Requires hidapi.
bitbox-usb = ["bitbox", "dep:hidapi", "bitbox-api/usb"]
coldcard = ["dep:coldcard", "regex"]
specter = ["tokio", "tokio-serial", "serialport"]
jade = ["tokio", "tokio-serial", "serde", "serde_bytes", "serde_cbor", "serialport", "reqwest"]
ledger = ["regex", "tokio", "ledger_bitcoin_client", "ledger-transport-hidapi", "ledger-apdu", "dep:hidapi"]
regex = ["dep:regex"]
service = ["bitbox-usb", "coldcard", "jade", "ledger", "specter", "tracing", "hex", "crossbeam"]

[dependencies]
async-trait = "0.1.52"
futures = "0.3"
bitcoin = { version = "0.32", default-features = false, features = ["base64", "serde", "std"] }

# specter & jade
tokio-serial = { version = "5.4.1", optional = true }
serialport = { version = "4.3", optional = true }

# jade
serde = { version = "1.0", features = ["derive"], optional = true }
serde_bytes = { version = "0.11.14", optional = true }
serde_cbor = { version = "0.11", optional = true }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] , optional = true}

# bitbox — base features only; "usb" is added by bitbox-usb feature
bitbox-api = { version = "0.9.0", default-features = false, features = ["tokio", "multithreaded"], optional = true }

# coldcard
coldcard = { version = "0.12.2", optional = true }

# ledger
ledger_bitcoin_client = { version = "0.5.0", optional = true }
ledger-apdu = { version = "0.10", optional = true }
ledger-transport-hidapi = { version = "0.10.0", optional = true }

# bitbox & ledger
hidapi = { version = "2.5.1", features = ["linux-static-hidraw"], default-features = false, optional = true }
regex = { version = "1.6.0", optional = true }

# jade & specter & ledger & bitbox
tokio = { version = "1.21.0", features = ["net", "time", "io-util", "sync", "macros"], optional = true }

# service module (requires all device features)
tracing = { version = "0.1.37", optional = true }
hex = { version = "0.4.3", optional = true }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"], optional = true }

[dev-dependencies]
tokio = { version = "1.21", features = ["macros", "net", "rt", "rt-multi-thread", "io-util", "sync"] }
